--- a/src/style.css
+++ b/src/style.css
@@ -183,6 +183,7 @@ html {
   width: 1.8em !important;
 }
 
+
 .navbar-nav .nav-link {
   color: #fbd9ad !important;
   padding-right: 1rem !important;
@@ -236,10 +237,10 @@ html {
 /* Home section */
 /* --------- */
 .wave {
-  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
-  animation-duration: 2.1s; /* Change to speed up or slow down */
-  animation-iteration-count: infinite; /* Never stop waving :) */
-  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  animation-name: wave-animation; 
+  animation-duration: 2.1s; 
+  animation-iteration-count: infinite; 
+  transform-origin: 70% 70%; 
   display: inline-block;
 }
 
@@ -281,15 +282,20 @@ html {
   padding-top: 0px !important;
 }
 
+
+
 .home-section {
   position: relative;
   z-index: 2;
-  background-image: var(--image-gradient), url(./images/h3.jpg);
+  background: linear-gradient(to bottom, #020242 0%, #da6da3 100%);
+
   background-position: top center;
-  background-size: cover !important;
+  background-size: 100% auto;
   background-repeat: no-repeat;
   padding-bottom: 22px !important;
   padding-top: 30px !important;
+  width: 100vw; 
+  margin: 0; 
 }
 
 .home-content {
@@ -300,12 +306,12 @@ html {
 }
 
 .heading {
-  font-size: 4.4em !important;
+  font-size: 2.4em !important;
   padding-left: 45px !important;
 }
 
 .heading-name {
-  font-size: 4.0em !important;
+  font-size: 2.0em !important;
   padding-left: 45px !important;
 }
 
@@ -315,12 +321,12 @@ html {
 }
 
 .Typewriter__wrapper {
-  font-size: 2.2em !important;
+  font-size: 1.2em !important;
   color: #cb70ff !important;
-  font-weight: 600 !important;
+  font-weight: 300 !important;
 }
 .Typewriter__cursor {
-  font-size: 2.4em !important;
+  font-size: 1.4em !important;
   color: #cb70ff !important;
 }
 .typing-homeclass{
@@ -1061,10 +1067,12 @@ html {
 }
 
 .logo_img {
-  margin: 3px;
-  width: auto;
+  margin: 8px;
+  width: Auto;
   height: 100px;
 }
+
+
 
 .cert-body {
   margin: 0px;
